--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Shop Homepage - Start Bootstrap Template</title>
+        <meta name="description" content="A festival Webshop" />
+        <meta name="author" content="sealreth" />
+        <title>AWESOME fastival webs</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -15,7 +15,7 @@
 
         <script src="js/base.js"></script>
     </head>
-    <body>
+    <body style="background: color #f9f9f9;">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
@@ -63,13 +63,13 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">Festivities in style!</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">=]</p>
+                    <p class="lead fw-normal text-white-50 mb-0">Van kamperen tot feesten!</p>
                 </div>
             </div>
         </header>
         <!-- Section-->
         <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
+            <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5">
                 <div class="row" id="products-row">
                     
                 </div>
@@ -82,7 +82,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Young Capital NEXT 2023</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
