--- a/Java2.html
+++ b/Java2.html
@@ -5,12 +5,58 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <link href="css/styles.css">
+    <link href="css/styles.css" rel="stylesheet" />
 
     <script src="js/base.js"></script>
 </head>
-<body>
-    <div class="container">
+<body style="background-color: #f9f9f9;">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar bg-light">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" href="index.html">Quackers! Webshop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Python4.html">DATA</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="Java2.html">Account Aanmaken</a></li>
+                    <li class="nav-item"><a class="nav-link" href="product.html">Product</a></li>
+                   
+                   
+                    <!-- <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="product.html">Product</a></li>
+                            <li><hr class="dropdown-divider" /></li>
+                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
+                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                        </ul>
+                    </li> -->
+                </ul>
+               <!-- <form class="d-flex">
+                    <button class="btn btn-outline-dark" type="submit">
+                        <i class="bi-cart-fill me-1"></i>
+                        Cart
+                        <span id="shoppingcart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                    </button>
+                </form> -->
+             <form class="d-flex">
+                <div class="dropdown" id="shopping-cart-dropdown">
+                    <button class="btn btn-outline-dark dropdown-toggle" type="submit" id="shopping-cart-button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi-cart-fill me-1"></i>
+                        Cart
+                        <span id="shoppingcart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="shopping-cart-button" id="shopping-cart-content">
+                        <!-- Shopping cart content will be inserted here -->
+                    </div>
+                </div>
+              </form>
+            </div>
+        </div>
+    </nav>
+
+    <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5">
         <div class="row mb-3">
             <div class="col-12">
                 <h1>Account Management</h1>
