--- a/Python4.html
+++ b/Python4.html
@@ -509,8 +509,10 @@
 
     </script>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+
+<body style="background-color: #f9f9f9;">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar bg-light">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="index.html">Quackers! Webshop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -519,16 +521,38 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="Python4.html">DATA</a></li>
                     <li class="nav-item"><a class="nav-link" href="Java2.html">Account Aanmaken</a></li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item"><a class="nav-link" href="product.html">Product</a></li>
+                   
+                   
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="product.html">Product</a></li>
+                            <li><hr class="dropdown-divider" /></li>
                             <li><a class="dropdown-item" href="#!">Popular Items</a></li>
                             <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
+               <!-- <form class="d-flex">
+                    <button class="btn btn-outline-dark" type="submit">
+                        <i class="bi-cart-fill me-1"></i>
+                        Cart
+                        <span id="shoppingcart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                    </button>
+                </form> -->
+             <form class="d-flex">
+                <div class="dropdown" id="shopping-cart-dropdown">
+                    <button class="btn btn-outline-dark dropdown-toggle" type="submit" id="shopping-cart-button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi-cart-fill me-1"></i>
+                        Cart
+                        <span id="shoppingcart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="shopping-cart-button" id="shopping-cart-content">
+                        <!-- Shopping cart content will be inserted here -->
+                    </div>
+                </div>
+              </form>
             </div>
         </div>
     </nav>
