--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="col-12 col-md-4 mb-3">
                             <div class="card h-100">
                                 <!-- Product image-->
-                                <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                                <img class="card-img-top" src="${product.productfoto}" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
