--- a/product.html
+++ b/product.html
@@ -12,6 +12,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+        <script src="js/base.js"></script>
     </head>
     <body style="background-color: #f9f9f9;">
         <!-- Navigation-->
@@ -25,25 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="Python4.html">DATA</a></li>
                         <li class="nav-item"><a class="nav-link" href="Java2.html">Account Aanmaken</a></li>
                         <li class="nav-item"><a class="nav-link active" href="product.html">Product</a></li>
-                       
-                       
-                        <!-- <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="product.html">Product</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-                        </li> -->
                     </ul>
-                   <!-- <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span id="shoppingcart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </form> -->
                  <form class="d-flex">
                     <div class="dropdown" id="shopping-cart-dropdown">
                         <button class="btn btn-outline-dark dropdown-toggle" type="submit" id="shopping-cart-button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -62,19 +46,29 @@
         <!-- Product section-->
         <section class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5 py-5">
             <div class="container px-4 px-lg-5 my-5">
-                <div class="row gx-4 gx-lg-5 align-items-center">
-                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
+                <div class="row">
                     <div class="col-md-6">
-                        <div class="small mb-1">SKU: BST-498</div>
-                        <h1 class="display-5 fw-bolder">Shop item template</h1>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item" aria-current="page">Home</li>
+                                <li class="breadcrumb-item" aria-current="page">Producten</li>
+                                <li class="breadcrumb-item active" aria-current="page" id="product-breadcrumb-name"></li>
+                            </ol>
+                        </nav>
+                        <img id="product-photo" class="card-img-top mb-5 mb-md-0" src="" alt="" />
+                    </div>
+                    <div class="col-md-6">
+                        <div class="small mb-1" id="product-category"></div>
+                        <h1 class="display-5 fw-bolder" id="product-name">Shop item template</h1>
                         <div class="fs-5 mb-5">
-                            <span class="text-decoration-line-through">$45.00</span>
-                            <span>$40.00</span>
+                            <!-- <span class="text-decoration-line-through">$45.00</span> -->
+                            <span id="product-price"></span>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
+                        <p class="lead" id="product-description"></p>
+                        <p>Voorraad: <span id="product-stock"></span></p>
                         <div class="d-flex">
-                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                            <input class="form-control text-center me-3" id="product-amount-input" type="number" value="1" min="1" max="99" style="max-width: 4rem" />
+                            <button class="btn btn-outline-dark flex-shrink-0" type="button" onclick="addProductToShoppingCart()">
                                 <i class="bi-cart-fill me-1"></i>
                                 Add to cart
                             </button>
@@ -83,119 +77,59 @@
                 </div>
             </div>
         </section>
-        <!-- Related items section-->
-        <section class="py-5">
-            <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5 container px-4 px-lg-5 mt-5">
-                <h2 class="fw-bolder mb-4">Related products</h2>
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Fancy Product</h5>
-                                    <!-- Product price-->
-                                    $40.00 - $80.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Special Item</h5>
-                                    <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                    </div>
-                                    <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">$20.00</span>
-                                    $18.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Sale Item</h5>
-                                    <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">$50.00</span>
-                                    $25.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Popular Item</h5>
-                                    <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                    </div>
-                                    <!-- Product price-->
-                                    $40.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+
+        <!-- Hier kunnen we berichten in weergeven -->
+        <div id="messages-container">
+        </div>
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
         </footer>
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/shoppingcart.js"></script>
+
+        <script>
+            let productId = 0;
+            let nlCurrencyFormatter = new Intl.NumberFormat('nl-NL', {
+                style: 'currency',
+                currency: 'EUR',
+            });
+
+            function fillProductDetails() {
+                fetch(BACKEND_URL + "/product/" + productId )
+                    .then(response => response.json())
+                    .then(product => {
+                        document.getElementById('product-photo').src = product.productfoto;
+                        document.getElementById('product-category').innerText = product.categorie;
+                        document.getElementById('product-description').innerText = product.productbeschrijving;
+                        document.getElementById('product-name').innerText = product.naam;
+                        document.getElementById('product-breadcrumb-name').innerText = product.naam;
+                        document.getElementById('product-price').innerText = nlCurrencyFormatter.format(product.prijs);
+                        document.getElementById('product-stock').innerText = product.voorraad;
+
+                        document.getElementById('product-amount-input').max = product.voorraad;
+                    });
+            }
+
+            function addProductToShoppingCart () {
+                let amount = parseInt(document.getElementById('product-amount-input').value);
+
+                addShoppingCartEntry(1, productId, amount);
+            }
+
+            window.addEventListener("DOMContentLoaded", (event) => {
+                console.log("DOMContentLoaded");
+
+                let requestParams = new URLSearchParams(location.search)
+                productId = parseInt(requestParams.get("id"))
+
+                fillProductDetails();
+            });
+        </script>
     </body>
 </html>
